objects/Approval__c.object
<CustomObject>
    <fields>
        <fullName>Net_SaaS__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Pull from PL1W &amp; PL33 from Products/Services</description>
        <label>Net SaaS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Pull from PL81, PLG3, PL8S, PL2Z from Products/Services</description>
        <label>Net Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Travel_Expenses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Net Travel &amp; Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_jet_ProSupplies_Pricing_Margin__c</fullName>
        <label>Office-jet ProSupplies Pricing Margin(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Office_jet_Pro_HW_Pricing_Margin__c</fullName>
        <label>Office-jet Pro HW Pricing Margin(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity__r.Opportunity_ID__c</formula>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Role__c</fullName>
        <formula>Opportunity__r.Owner__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner__r.Last_First_Name__c</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Request_Type__c</fullName>
        <formula>Text(Opportunity__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Start_Date__c</fullName>
        <formula>Opportunity__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Structure__c</fullName>
        <label>Opportunity Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Price or Mixed Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Augmentation or Bucket of Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time &amp; Material (with cap)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time and Material (with Deliverables)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time and Material (without Deliverables)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Total_Value__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Type)</formula>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_system_id__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity system id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Risk_Rating__c</fullName>
        <label>Overall Risk Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OwnerFullName__c</fullName>
        <formula>Opportunity__r.Owner__r.Last_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerFullName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <formula>Opportunity__r.Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owners_BG__c</fullName>
        <formula>Opportunity__r.Business_Group2__c</formula>
        <label>Owners BG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Involvement__c</fullName>
        <label>Partner Involvement</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Country Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Inter_region_250K_Revenue_Spl__c</fullName>
        <label>Potential Inter-region $250K Revenue Spl</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Premier_Support__c</fullName>
        <label>Premier Support</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Contract_Discounts__c</fullName>
        <label>Previous Contract Discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_Contract_Gross_Value__c</fullName>
        <label>Previous Contract Gross Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Contract_Net_Value__c</fullName>
        <label>Previous Contract Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Deal_Value__c</fullName>
        <label>Previous Deal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Discount_Percent__c</fullName>
        <label>Previous Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Approach__c</fullName>
        <label>Pricing Approach</label>
        <picklist>
            <picklistValues>
                <fullName>Binding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Binding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indicative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pricing_Margin__c</fullName>
        <label>Pricing Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Services_Opportunity_Structure__c</fullName>
        <label>Primary Services Opportunity Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Staff Augmentation or Bucket of Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time and Material (with Deliverables)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time and Material (without Deliverables)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time &amp; Material (with cap)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Discount_Pct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Product Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Promotion_being_used__c</fullName>
        <label>Promotion being used</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Center_Contact_Email__c</fullName>
        <label>Proposal Center Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Due_Date__c</fullName>
        <formula>Opportunity__r.Proposal_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prosposal_Due_Date__c</fullName>
        <label>Prosposal  Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pursuit_Budget_USD__c</fullName>
        <description>Pursuit Budget (USD)</description>
        <label>Pursuit Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pursuit_Budget__c</fullName>
        <description>Do not use this field</description>
        <label>DoNotUse Pursuit Budget (USD)</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Queue_Level_10__c</fullName>
        <label>Queue Level 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Level_11__c</fullName>
        <label>Queue Level 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Level_12__c</fullName>
        <label>Queue Level 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Detail__c</fullName>
        <label>Quote Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_End_Date__c</fullName>
        <label>Quote End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Net_Value__c</fullName>
        <label>Quote Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal_Expiration_Date__c</fullName>
        <label>Quote/Proposal Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Service_Level_s__c</fullName>
        <label>Quote Service Level(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Start_Date__c</fullName>
        <label>Quote Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Value__c</fullName>
        <label>Quote Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_for_Carve_Out__c</fullName>
        <label>Reason for Carve Out</label>
        <picklist>
            <picklistValues>
                <fullName>Implied support/delayed support start from license delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Carve Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penalties/SLAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relicensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Support &lt; VSOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services/Training/SaaS &lt; VSOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_Account_Region__c</fullName>
        <formula>Opportunity__r.Account_Region__c</formula>
        <label>Region (Account Region)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regions_Involved__c</fullName>
        <label>Regions Involved</label>
        <picklist>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Comments__c</fullName>
        <label>Requestor Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revenue_Splits__c</fullName>
        <label>Revenue Splits?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Rating__c</fullName>
        <label>Risk Rating</label>
        <picklist>
            <picklistValues>
                <fullName>L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RLT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAID_of_Existing_SW_Installation__c</fullName>
        <label>SAID of Existing SW Installation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SN_Discount_In_Dollar__c</fullName>
        <label>Special Negotiated Discount In Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SN_Discount__c</fullName>
        <label>Special Negotiated Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SaaS_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SaaS Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SaaS__c</fullName>
        <label>SaaS</label>
        <picklist>
            <picklistValues>
                <fullName>SaaS Term Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SaaS associated with a term license</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SaaS associated with a perpetual license</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SaaS associated with an existing license</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sales_Metric_Code__c</fullName>
        <label>Sales Metric Code</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <label>Sales Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Date_From__c</fullName>
        <label>Search Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Search_Date_To__c</fullName>
        <label>Search Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services</label>
        <picklist>
            <picklistValues>
                <fullName>ROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Direct SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Direct Change Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Change Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICOEM SOW w/ ES or TS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICOEM Change Order w/ ES or TS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standalone Pre-Packaged &amp; Pre-Priced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bucket of Hours - AMS only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get Well Funding (via Carve)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Skip_Approver_Level_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Approver/Queue 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Approver_Level_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Approver/Queue 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Approver_Level_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Approver/Queue 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Software__c</fullName>
        <label>Software</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License + Support (non-ELA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License + Support (ELA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Stack Perpet Lic to ES (non-EL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Stack Perpetual Lic to ES (ELA)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Solution_Mix__c</fullName>
        <label>Solution Mix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Submitter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Duration__c</fullName>
        <label>Support Duration</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Type__c</fullName>
        <label>Support Type</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Basic (9x5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Standard (24x7)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Priority (Premiere)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Pricing_Margin__c</fullName>
        <label>System Pricing Margin(%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Template_Id__c</fullName>
        <label>Template Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Products__c</fullName>
        <label>Third Party Products</label>
        <picklist>
            <picklistValues>
                <fullName>3P HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3P HW + SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3P SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Value__c</fullName>
        <formula>Opportunity__r.Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upfront_Support_Pricing_Methodology__c</fullName>
        <label>Upfront Support Pricing Methodology</label>
        <picklist>
            <picklistValues>
                <fullName>% Net License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% List License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% Discount off Support List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upfront_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Upfront Support %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>What_is_Being_Requested__c</fullName>
        <label>What is Being Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Budgetary Quote – EMEA only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealONE Approval + Legal Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Quote Only</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Winning_GBU_Value__c</fullName>
        <label>Winning GBU Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Winning_GBU__c</fullName>
        <label>Winning GBU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winning_PL_Value__c</fullName>
        <label>Winning PL Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Winning_PL__c</fullName>
        <label>Winning PL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winning_SPL_Value__c</fullName>
        <label>Winning SPL Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Winning_SPL__c</fullName>
        <label>Winning SPL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3P_Royalty_Products_with_HP_SKUs_Includ__c</fullName>
        <label>3P Royalty Products with HP SKUs Include</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Approval</label>
    <nameField>
        <displayFormat>APP-{00000000}</displayFormat>
        <label>Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvals</pluralLabel>
    <recordTypes>
        <fullName>Business_Review</fullName>
        <active>true</active>
        <description>Business Review</description>
        <label>Opportunity Business Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Review</fullName>
        <active>true</active>
        <description>Opportunity Review</description>
        <label>Opportunity Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal</fullName>
        <active>true</active>
        <description>Renewal Opportunties Approval</description>
        <label>Renewal</label>
    </recordTypes>
    <recordTypes>
        <fullName>SND</fullName>
        <active>true</active>
        <label>SND</label>
    </recordTypes>
    <recordTypes>
        <fullName>Special_Negotiated_Discount</fullName>
        <active>true</active>
        <label>Special Negotiated Discount</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DG_OBR_EducationDiscountReqWhenNetEdugt0</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Solution_Mix__c = &apos;Service&apos;,Net_Education__c &gt; 0, ISBLANK(Education_Discount__c))</errorConditionFormula>
        <errorMessage>Education Discount %  is required if Net Education is greater than Zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DG_OBR_HighestIndividualPackaServDiscReq</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Solution_Mix__c = &apos;Service&apos;, Net_Packaged_Services__c &gt; 0,ISBLANK(Highest_Individual_Packaged_Services_Dis__c))</errorConditionFormula>
        <errorMessage>Highest individual packaged services discount is required if Net Packaged Service greater than Zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DG_OBR_ProductFieldsRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Solution_Mix__c==&apos;Product&apos;, OR( ISBLANK(Software__c),ISPICKVAL(Premier_Support__c,&apos;&apos;) ,ISBLANK(Education__c),ISBLANK(SaaS__c) ,ISPICKVAL(Third_Party_Products__c,&apos;&apos;),ISPICKVAL(Is_Deal_being_financed__c,&apos;&apos;),ISBLANK(Net_Education__c),ISPICKVAL(What_is_Being_Requested__c,&apos;&apos;),ISPICKVAL(Governing_Terms__c,&apos;&apos;),TEXT(Quote_Proposal_Expiration_Date__c)=&apos;&apos;,ISPICKVAL(Partner_Involvement__c,&apos;&apos;),ISPICKVAL(Installed_Base_SW_Relicensing__c,&apos;&apos;),ISPICKVAL(Future_License_Price_Hold_Discount__c,&apos;&apos;),ISPICKVAL(Geographic_License_Option__c,&apos;&apos;),ISPICKVAL(Anticipated_Carve_Out_from_License__c,&apos;&apos;),ISPICKVAL(Promotion_being_used__c,&apos;&apos;),ISPICKVAL(X3P_Royalty_Products_with_HP_SKUs_Includ__c,&apos;&apos;),ISBLANK(Customer_Contact_Name__c),ISBLANK(Language_on_Quote__c),ISPICKVAL(Payment_Terms__c,&apos;&apos;),ISPICKVAL(Revenue_Splits__c,&apos;&apos;),
(AND(OR(INCLUDES(Software__c,&apos;Term License&apos;),INCLUDES(Software__c,&apos;License + Support (non-ELA)&apos;),INCLUDES(Software__c,&apos;License + Support (ELA)&apos;),INCLUDES(Software__c,&apos;Subscription&apos;)),OR(ISPICKVAL(Support_Type__c,&apos;&apos;),ISPICKVAL(Support_Duration__c,&apos;&apos;),ISBLANK(Upfront_Support__c),ISPICKVAL(Upfront_Support_Pricing_Methodology__c,&apos;&apos;)))),(AND(ISPICKVAL(Revenue_Splits__c,&apos;Yes&apos;),OR(ISPICKVAL(Multi_Region_Deal__c,&apos;&apos;),ISPICKVAL(Regions_Involved__c,&apos;&apos;),ISPICKVAL(Potential_Inter_region_250K_Revenue_Spl__c,&apos;&apos;),ISPICKVAL(All_sides_in_agreement__c,&apos;&apos;)))),
AND(OR(INCLUDES(Software__c,&apos;License + Support (ELA)&apos;)),OR(ISBLANK(Customer_Address__c),ISBLANK(Customer_Phone_No__c),ISBLANK(ELA_Term_in_months__c),ISPICKVAL(ELA_Structure__c,&apos;&apos;)))
))</errorConditionFormula>
        <errorMessage>Please enter values for required fields</errorMessage>
    </validationRules>
</CustomObject>